--- a/css/style.css
+++ b/css/style.css
@@ -525,10 +525,21 @@ mark,
   content: "\2014\00A0";
 }
 
+.img-fluid-a {
+  max-width: 100%;
+  height: 600px;
+}
+
+.img-fluid-r {
+  max-width: 100%;
+  height: auto;
+}
+
 .img-fluid {
   max-width: 100%;
   height: auto;
 }
+
 
 .img-thumbnail {
   padding: 0.25rem;
